ci: fix PHPCS workflow by registering WordPress coding standard in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -25,29 +26,47 @@ jobs:
         with:
           php-version: '8.2'
 
-      - name: Composer install
+      - name: Install Composer dependencies
         run: composer install --no-interaction --prefer-dist
 
-      - name: PHP lint
+      - name: Register WordPress Coding Standard
+        run: vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs
+
+      - name: PHP syntax check
         run: find src -name "*.php" -exec php -l {} \;
 
-      - name: PHPUnit
-        run: vendor/bin/phpunit
-
-      - name: PHPCS
+      - name: Run PHPCS
         run: vendor/bin/phpcs --standard=WordPress src
+
+      - name: Run PHPUnit tests
+        run: vendor/bin/phpunit
 
   release:
     needs: build-test
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install Composer dependencies
+        run: composer install --no-interaction --prefer-dist
+
       - name: Build dist
         run: npm ci && npm run dist
+
       - name: Zip plugin
-        run: cd dist && zip -r ../my-plugin.zip my-plugin
-      - name: GitHub Release
+        run: |
+          cd dist
+          zip -r ../my-plugin.zip my-plugin
+
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           files: my-plugin.zip
