--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Set up Node & build assets
+      # 2. Node & build assets
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
@@ -23,7 +23,7 @@ jobs:
       - name: Build JS/CSS
         run: npm ci && npm run build
 
-      # 3. Set up PHP & Composer
+      # 3. PHP & Composer
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -32,19 +32,22 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --no-interaction --prefer-dist
 
-      # 4. Ensure PHPCS uses local WPCS
+      # 4. PHPCS config reset & registration
       - name: Reset PHPCS config
         run: ./vendor/bin/phpcs --config-delete installed_paths || true
 
       - name: Register WPCS
-        run: ./vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs
+        run: ./vendor/bin/phpcs --config-set installed_paths $(composer config vendor-dir)/wp-coding-standards/wpcs
 
+      # 5. PHP lint
       - name: PHP syntax check
         run: find src -name "*.php" -exec php -l {} \;
 
+      # 6. Run PHPCS
       - name: Run PHPCS
         run: ./vendor/bin/phpcs --standard=WordPress src
 
+      # 7. Run PHPUnit
       - name: Run PHPUnit tests
         run: ./vendor/bin/phpunit
 
