update to ci.yml to exclude dev files in final zip

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,18 +84,16 @@ jobs:
       # 5. Zip the plugin (production only)
       - name: Zip plugin
         run: |
-          # Make a clean temp folder
           mkdir -p temp-plugin
-          # Copy only the plugin PHP files, src, assets, etc.
-          rsync -av --progress plugin-starter/ temp-plugin/ \
+          # Copy only the production files
+          rsync -av --progress . temp-plugin/ \
             --exclude 'tests' \
             --exclude 'gulpfile.js' \
             --exclude 'package.json' \
             --exclude 'package-lock.json' \
             --exclude 'node_modules' \
             --exclude '.github' \
-            --exclude '.gitignore'
-          # Create the zip
+            --exclude '.git*'
           cd temp-plugin
           zip -r ../plugin-starter.zip *
 
