update to ci.yml to exclude dev files in final zip

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,13 +81,10 @@ jobs:
       - name: Build dist
         run: npm ci && npm run dist
 
-      # 5. Zip the plugin (production only)
       - name: Zip plugin (production only)
         run: |
-          # Create temp folder
           mkdir -p temp-plugin
-          # Copy only necessary plugin files
-          rsync -av --progress plugin-starter/ temp-plugin/ \
+          rsync -av --progress . temp-plugin/ \
             --exclude 'tests' \
             --exclude 'gulpfile.js' \
             --exclude 'package.json' \
@@ -95,9 +92,7 @@ jobs:
             --exclude 'node_modules' \
             --exclude '.github' \
             --exclude '.git*'
-          # Go into temp folder
           cd temp-plugin
-          # Create the zip quietly (fast)
           zip -r -q ../plugin-starter.zip *
 
       # 6. Create Git tag with PAT
