gulpfile and package.json updated with css, js, watch and full build commands

--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-    "name": "plugin-starter",
-    "private": true,
-    "scripts": {
-        "build:js": "rollup -c",
-        "build": "npm run build:js",
-        "dist": "gulp build-dist"
-    },
-    "devDependencies": {
-        "@rollup/plugin-terser": "^0.4.4",
-        "del": "^6.1.1",
-        "gulp": "^4.0.2",
-        "rollup": "^3.29.0"
-    }
+  "name": "plugin-starter",
+  "private": true,
+  "scripts": {
+    "build:js": "rollup -c",
+    "build:css": "gulp css",
+    "build:all": "gulp build",
+    "dist": "gulp build",
+    "watch": "gulp"
+  },
+  "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
+    "del": "^6.1.1",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.1.0",
+    "rollup": "^3.29.0"
+  }
 }
