--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build:js": "rollup -c",
     "build:css": "gulp css",
-    "build:all": "gulp build",
+    "build": "gulp build",
     "dist": "gulp build",
     "watch": "gulp"
   },
